[project]
name = "freesliders"
version = "0.1.0"
description = "Converted from Conda environment.yml"
requires-python = "==3.9.21"
dependencies = [
    # Core ML and Deep Learning
    "torch==2.6.0",
    "torchvision==0.21.0", 
    "diffusers==0.32.1",
    "transformers==4.46.2",
    "accelerate==1.1.1",
    "xformers==0.0.29.post3",
    "safetensors==0.5.3",
    "tokenizers==0.20.3",
    "huggingface-hub==0.25.0",
    "peft==0.14.0",
    
    # Image Processing
    "pillow==10.1.0",
    "opencv-python==4.5.5.64",
    "scikit-image==0.24.0",
    "lpips==0.1.4",
    "timm==1.0.15",
    
    # Scientific Computing
    "numpy==1.26.4",
    "einops==0.8.1",
    "matplotlib==3.6.3",
    "tqdm==4.64.1",
    
    # Jupyter Notebook Support
    "jupyter==1.1.1",
    "jupyterlab==4.3.6",
    "ipykernel==6.29.5",
    "ipython==8.7.0",
    "ipywidgets==8.1.5",
    "matplotlib-inline==0.1.7",
    
    # Optimizers and Training
    "bitsandbytes==0.45.3",
    "lion-pytorch==0.1.2",
    "dadaptation==3.1",
    "prodigyopt==1.0",
    
    # Logging and Monitoring
    "wandb==0.12.21",
    "neptune",
]

